--- a/style.css
+++ b/style.css
@@ -12,4 +12,13 @@ body {
     url(./img/s-tsuchiya-2UpH_leC9vc-unsplash.jpg);
   background-size: cover;
   object-fit: cover;
+  display: flex;
+  align-items: center;
+}
+.container-login {
+  width: 26%;
+  height: 58vh;
+  background: linear-gradient(to top, rgb(248, 13, 205), rgb(197, 13, 248));
+  border-radius: 2%;
+  margin: auto;
 }
