--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  color: white;
 }
 .container {
   width: 100%;
@@ -17,8 +18,62 @@ body {
 }
 .container-login {
   width: 26%;
-  height: 58vh;
+  height: 450px;
   background: linear-gradient(to top, rgb(248, 13, 205), rgb(197, 13, 248));
   border-radius: 2%;
   margin: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.logo {
+  width: 50px;
+  height: 50px;
+  margin-top: 20px;
+  background-color: rgba(56, 55, 55, 0.815);
+  -webkit-mask-image: url(./img/person-circle.svg);
+  mask-image: url(./img/person-circle.svg);
+  -webkit-mask-size: cover;
+  mask-size: contain;
+  border-radius: 50%;
+}
+.container-login > p {
+  text-transform: uppercase;
+  word-spacing: 5px;
+  letter-spacing: 2px;
+  font-weight: 800;
+  font-family: Arial, Helvetica, sans-serif;
+}
+input {
+  border: none;
+  height: 40px;
+  width: 80%;
+  margin: 8px;
+  border-radius: 1.5px;
+  background: transparent;
+  border-bottom: solid 2px white;
+  line-height: 1;
+  /* ce qui efface une border lors que je saisie une texte dans l'input */
+  outline-style: none;
+  font-size: 17px;
+  color: rgb(255, 255, 255);
+  padding: 0;
+}
+button {
+  width: 30%;
+  height: 35px;
+  border: none;
+  border-radius: 30px;
+  background-color: white;
+  color: black;
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: uppercase;
+  translate: 0 25px;
+}
+.p {
+  translate: 0 80px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  letter-spacing: 1.3px;
+  font-weight: 400;
 }
